--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
     
 before_install:
-  - docker build -t sinch5/docker-react -f Docker.dev -f
+  - docker build -t sinch5/docker-react -f Dockerfile.dev .
    
 script:
   - docker run sinch5/docker-react npm runt test -- --coverage
