--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t sinch5/docker-react -f Dockerfile.dev .
    
 script:
-  - docker run sinch5/docker-react npm run test --watchAll=false
+  - docker run sinch5/docker-react npm test -- --coverage
